--- a/packages/client/src/index.scss
+++ b/packages/client/src/index.scss
@@ -1,3 +1,13 @@
 .mantine-main {
   height: 100dvh;
 }
+
+.logo {
+    padding-left: 1rem;
+}
+
+.header {
+    // justify-content: center;
+    align-items: center;
+    display: flex;
+}
