--- a/packages/client/src/components/review/index.module.scss
+++ b/packages/client/src/components/review/index.module.scss
@@ -1,9 +1,9 @@
 .reviewCard {
-  border: 1px solid #fff;
+  border: 1px solid #d9d9d9;
   border-radius: 10px;
   padding: 20px;
   margin: 20px 0;
-  color: #fff; /* Text color for visibility */
+  color: #000000; /* Text color for visibility */
   font-family: Arial, sans-serif;
 }
 
