fix: allow entire cards to be links and store search query

--- a/packages/client/src/components/restaurantCard/index.module.scss
+++ b/packages/client/src/components/restaurantCard/index.module.scss
@@ -7,6 +7,13 @@
     margin: 2em;
     margin-top: 1em;
     margin-bottom: 10px;
+
+    .link {
+        text-decoration: none; 
+        text-decoration: none; 
+        text-decoration: none; 
+        text-decoration: none; 
+    }
   
     .itemImage {
       width: 20em;
@@ -61,4 +68,3 @@
       }
     }
   }
-  
